Incorporate feedback from @reta
- Renamed various classes from "SearchPipelinesSomething" to
"SearchPipelineSomething" to be consistent.
- Refactored NodeInfo construction in NodeService to avoid ternary
  operator and improved readability.

Signed-off-by: Michael Froh <froh@amazon.com>

--- a/modules/search-pipeline-common/build.gradle
+++ b/modules/search-pipeline-common/build.gradle
@@ -22,7 +22,7 @@ dependencies {
 
 restResources {
   restApi {
-    includeCore '_common', 'search_pipelines', 'cluster', 'indices', 'index', 'nodes',  'search'
+    includeCore '_common', 'search_pipeline', 'cluster', 'indices', 'index', 'nodes',  'search'
   }
 }
 
