--- a/server/build.gradle
+++ b/server/build.gradle
@@ -136,6 +136,10 @@ dependencies {
   // jna
   api "net.java.dev.jna:jna:${versions.jna}"
 
+  // protobuf
+  api 'com.google.protobuf:protobuf-java:3.22.2'
+
+
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
     exclude group: 'org.opensearch', module: 'server'
