--- a/modules/lang-painless/src/yamlRestTest/resources/rest-api-spec/test/painless/30_search.yml
+++ b/modules/lang-painless/src/yamlRestTest/resources/rest-api-spec/test/painless/30_search.yml
@@ -482,3 +482,89 @@
                         }]
     - match: { error.root_cause.0.type: "illegal_argument_exception" }
     - match: { error.root_cause.0.reason: "script score function must not produce negative scores, but got: [-9.0]"}
+
+---
+
+"Flat-object fields from within the scripting":
+  - skip:
+      version: " - 2.99.99"
+      reason: "flat_object is introduced in 3.0.0 in main branch"
+
+  - do:
+      indices.create:
+        index: test
+        body:
+          mappings:
+            properties:
+              flat:
+                type : "flat_object"
+
+  - do:
+      index:
+        index: test
+        id:    1
+        body:  {
+          "flat": {
+            "field_1": "John Doe",
+            "field_2": 33,
+            "field_3": false
+          }
+        }
+
+  - do:
+      index:
+        index: test
+        id:    2
+        body:  {
+          "flat": {
+            "field_1": "Joe Public",
+            "field_2": 45
+          }
+        }
+
+  - do:
+      indices.refresh:
+        index: test
+
+  # It is possible to filter based on the number of fields in the flat-object
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            bool: {
+              filter: {
+                script: {
+                  script: {
+                    source: "doc['flat'].size() > 2",
+                    lang: "painless"
+                  }
+                }
+              }
+            }
+          }
+        }
+
+  - length:   { hits.hits: 1  }
+  - match: { hits.hits.0._source.flat.field_1: "John Doe" }
+
+  - do:
+      search:
+        body: {
+          _source: true,
+          query: {
+            bool: {
+              filter: {
+                script: {
+                  script: {
+                    source: "doc['flat'].size() < 3",
+                    lang: "painless"
+                  }
+                }
+              }
+            }
+          }
+        }
+
+  - length:   { hits.hits: 1  }
+  - match: { hits.hits.0._source.flat.field_1: "Joe Public" }
