Adding protobuf gradle plugin to generate classes during build
Signed-off-by: Sarat Vemulapalli <vemulapallisarat@gmail.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -30,6 +30,10 @@
 
 import org.opensearch.gradle.info.BuildParams
 
+plugins {
+  id('com.google.protobuf') version '0.8.19'
+}
+
 apply plugin: 'opensearch.build'
 apply plugin: 'com.netflix.nebula.optional-base'
 apply plugin: 'opensearch.publish'
