Routine dependency updates: Netty 4.1.91.Final, ASM 9.5, ByteBuddy 1.14.3 (#6981) (#6986)
(cherry picked from commit 509454169778bb8b26a1fe8441975f7c344ec4be)

Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -14,14 +14,15 @@ icu4j             = 62.1
 supercsv          = 2.4.0
 log4j             = 2.17.1
 slf4j             = 1.6.2
-jettison          = 1.5.3
+asm               = 9.5
+jettison          = 1.5.4
 woodstox          = 6.4.0
 kotlin            = 1.7.10
 
 # when updating the JNA version, also update the version in buildSrc/build.gradle
 jna               = 5.5.0
 
-netty             = 4.1.90.Final
+netty             = 4.1.91.Final
 joda              = 2.12.2
 
 # when updating this version, you need to ensure compatibility with:
@@ -40,7 +41,7 @@ hamcrest          = 2.1
 mocksocket        = 1.2
 mockito           = 3.12.4
 objenesis         = 3.2
-bytebuddy         = 1.11.13
+bytebuddy         = 1.14.3
 
 # benchmark dependencies
 jmh               = 1.19
