Add data integrity for translog and segment file multipart uploads
Signed-off-by: Raghuvansh Raj <raghraaj@amazon.com>

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -146,8 +146,14 @@ dependencies {
   // jna
   api "net.java.dev.jna:jna:${versions.jna}"
 
+  // jcraft
+  api "com.jcraft:jzlib:${versions.jzlib}"
+
   // protobuf
   api "com.google.protobuf:protobuf-java:${versions.protobuf}"
+
+  // jcraft
+  api "com.jcraft:jzlib:${versions.jzlib}"
 
   testImplementation(project(":test:framework")) {
     // tests use the locally compiled version of server
