--- a/distribution/src/config/opensearch.yml
+++ b/distribution/src/config/opensearch.yml
@@ -89,13 +89,16 @@ ${path.logs}
 #
 # ---------------------------------- Remote Store -----------------------------------
 # Controls whether cluster imposes index creation only with remote store enabled
-# cluster.remote_store.enabled.force: true
+# cluster.remote_store.enabled: true
 #
 # Repository to use for segment upload while enforcing remote store for an index
-# cluster.remote_store.repository.segment.default: my-repo-1
+# cluster.remote_store.repository: my-repo-1
+#
+# Controls whether cluster imposes index creation only with translog remote store enabled
+# cluster.remote_store.translog.enabled: true
 #
 # Repository to use for translog upload while enforcing remote store for an index
-# cluster.remote_store.repository.translog.default: my-repo-1
+# cluster.remote_store.translog.repository: my-repo-1
 #
 # ---------------------------------- Experimental Features -----------------------------------
 #
