Changes the base package for ZipFile to avoid forbiddenApisError
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

--- a/distribution/tools/plugin-cli/build.gradle
+++ b/distribution/tools/plugin-cli/build.gradle
@@ -40,6 +40,8 @@ dependencies {
   testImplementation project(":test:framework")
   testImplementation 'com.google.jimfs:jimfs:1.2'
   testRuntimeOnly 'com.google.guava:guava:31.1-jre'
+
+  implementation 'org.apache.commons:commons-compress:1.23.0'
 }
 
 tasks.named("dependencyLicenses").configure {
