--- a/server/build.gradle
+++ b/server/build.gradle
@@ -371,6 +371,7 @@ tasks.named("licenseHeaders").configure {
     excludes << 'org/apache/lucene/search/RegExp87*'
     excludes << 'org/apache/lucene/search/RegexpQuery87*'
     excludes << 'org/opensearch/client/documentation/placeholder.txt'
+    excludes << 'org/opensearch/extensions/proto/*'
 }
 
 tasks.test {
