Updates thirdParty ignoreMissingClasses list
Signed-off-by: Darshit Chanpura <dchanp@amazon.com>

--- a/distribution/tools/plugin-cli/build.gradle
+++ b/distribution/tools/plugin-cli/build.gradle
@@ -80,3 +80,28 @@ thirdPartyAudit.ignoreViolations(
   'org.bouncycastle.jcajce.provider.ProvSunTLSKDF$TLSExtendedMasterSecretGenerator',
   'org.bouncycastle.jcajce.provider.ProvSunTLSKDF$TLSExtendedMasterSecretGenerator$2'
 )
+
+thirdPartyAudit.ignoreMissingClasses(
+  'com.github.luben.zstd.BufferPool',
+  'com.github.luben.zstd.ZstdInputStream',
+  'com.github.luben.zstd.ZstdOutputStream',
+  'org.brotli.dec.BrotliInputStream',
+  'org.objectweb.asm.AnnotationVisitor',
+  'org.objectweb.asm.Attribute',
+  'org.objectweb.asm.ClassReader',
+  'org.objectweb.asm.ClassVisitor',
+  'org.objectweb.asm.FieldVisitor',
+  'org.objectweb.asm.Label',
+  'org.objectweb.asm.MethodVisitor',
+  'org.objectweb.asm.Type',
+  'org.tukaani.xz.DeltaOptions',
+  'org.tukaani.xz.FilterOptions',
+  'org.tukaani.xz.LZMA2InputStream',
+  'org.tukaani.xz.LZMA2Options',
+  'org.tukaani.xz.LZMAInputStream',
+  'org.tukaani.xz.LZMAOutputStream',
+  'org.tukaani.xz.MemoryLimitException',
+  'org.tukaani.xz.UnsupportedOptionsException',
+  'org.tukaani.xz.XZ',
+  'org.tukaani.xz.XZOutputStream'
+)
