--- a/server/build.gradle
+++ b/server/build.gradle
@@ -349,6 +349,7 @@ tasks.named("missingJavadoc").configure {
    * Generated code doesn't follow javadocs formats.
    * Unfortunately the missingJavadoc task doesnt take *.
    * TODO: Add support to missingJavadoc task to ignore all generated source code
+   *  https://github.com/opensearch-project/OpenSearch/issues/7264
    */
   dependsOn("generateProto")
   javadocMissingIgnore = [
@@ -370,7 +371,7 @@ tasks.named("licenseHeaders").configure {
     excludes << 'org/apache/lucene/search/RegExp87*'
     excludes << 'org/apache/lucene/search/RegexpQuery87*'
     excludes << 'org/opensearch/client/documentation/placeholder.txt'
-    // Ignore for generated code
+    // Ignore for protobuf generated code
     excludes << 'org/opensearch/extensions/proto/*'
 }
 
@@ -378,4 +379,11 @@ tasks.test {
     if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
         jvmArgs += ["--add-opens", "java.base/java.nio.file=ALL-UNNAMED"]
     }
+}
+
+tasks.named("sourcesJar").configure {
+  // Ignore duplicates for protobuf generated code (main and generatedSources).
+  filesMatching("**/proto/*") {
+    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+  }
 }
