--- a/modules/identity-shiro/build.gradle
+++ b/modules/identity-shiro/build.gradle
@@ -30,6 +30,7 @@ dependencies {
   testImplementation project(path: ':modules:transport-netty4') // for http
   testImplementation project(path: ':plugins:transport-nio') // for http
   testImplementation "org.mockito:mockito-core:${versions.mockito}"
+    testImplementation project(path: ':client:rest-high-level')
 }
 
 /*
