--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -39,12 +39,19 @@ opensearchplugin {
 }
 
 dependencies {
-  api "com.amazonaws:aws-java-sdk-ec2:${versions.aws}"
-  api "com.amazonaws:aws-java-sdk-core:${versions.aws}"
+  api "software.amazon.awssdk:sdk-core:${versions.aws}"
+  api "software.amazon.awssdk:aws-core:${versions.aws}"
+  api "software.amazon.awssdk:utils:${versions.aws}"
+  api "software.amazon.awssdk:auth:${versions.aws}"
+  api "software.amazon.awssdk:ec2:${versions.aws}"
+  api "software.amazon.awssdk:http-client-spi:${versions.aws}"
+  api "software.amazon.awssdk:apache-client:${versions.aws}"
+  api "software.amazon.awssdk:regions:${versions.aws}"
   api "org.apache.httpcomponents:httpclient:${versions.httpclient}"
   api "org.apache.httpcomponents:httpcore:${versions.httpcore}"
   api "commons-logging:commons-logging:${versions.commonslogging}"
   api "org.apache.logging.log4j:log4j-1.2-api:${versions.log4j}"
+  api "org.slf4j:slf4j-api:${versions.slf4j}"
   api "commons-codec:commons-codec:${versions.commonscodec}"
   api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
   api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
@@ -57,7 +64,7 @@ restResources {
 }
 
 tasks.named("dependencyLicenses").configure {
-  mapping from: /aws-java-sdk-.*/, to: 'aws-java-sdk'
+  mapping from: /software.amazon.awssdk-.*/, to: 'software.amazon.awssdk'
   mapping from: /jackson-.*/, to: 'jackson'
 }
 
@@ -90,7 +97,7 @@ tasks.register("writeTestJavaPolicy") {
           "  permission org.bouncycastle.crypto.CryptoServicesPermission \"exportSecretKey\";",
           "  permission org.bouncycastle.crypto.CryptoServicesPermission \"exportPrivateKey\";",
           "  permission java.io.FilePermission \"\${javax.net.ssl.trustStore}\", \"read\";",
-          "  permission java.util.PropertyPermission \"com.amazonaws.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
+          "  permission java.util.PropertyPermission \"software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
           "};"
         ].join("\n")
       )
@@ -98,7 +105,7 @@ tasks.register("writeTestJavaPolicy") {
       javaPolicy.write(
         [
           "grant {",
-          "  permission java.util.PropertyPermission \"com.amazonaws.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
+          "  permission java.util.PropertyPermission \"software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
           "};"
         ].join("\n"))
     }
@@ -110,7 +117,7 @@ tasks.named("test").configure {
   // this is needed for insecure plugins, remove if possible!
   systemProperty 'tests.artifact', project.name
 
-  // Setting a custom policy to manipulate com.amazonaws.sdk.ec2MetadataServiceEndpointOverride system property
+  // Setting a custom policy to manipulate software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride system property
   // it is better rather disable security manager at all with `systemProperty 'tests.security.manager', 'false'`
   if (BuildParams.inFipsJvm){
     // Using the key==value format to override default JVM security settings and policy
@@ -128,30 +135,46 @@ tasks.named("check").configure {
 
 tasks.named("thirdPartyAudit").configure {
   ignoreMissingClasses(
-          // classes are missing
-          'javax.jms.Message',
-          'com.amazonaws.jmespath.JmesPathExpression',
-          'com.amazonaws.jmespath.ObjectMapperSingleton',
-          'software.amazon.ion.IonReader',
-          'software.amazon.ion.IonSystem',
-          'software.amazon.ion.IonType',
-          'software.amazon.ion.IonWriter',
-          'software.amazon.ion.Timestamp',
-          'software.amazon.ion.system.IonBinaryWriterBuilder',
-          'software.amazon.ion.system.IonSystemBuilder',
-          'software.amazon.ion.system.IonTextWriterBuilder',
-          'software.amazon.ion.system.IonWriterBuilder',
-          'javax.servlet.ServletContextEvent',
-          'javax.servlet.ServletContextListener',
-          'org.apache.avalon.framework.logger.Logger',
-          'org.apache.log.Hierarchy',
-          'org.apache.log.Logger'
+    // classes are missing
+    'javax.jms.Message',
+    'javax.servlet.ServletContextEvent',
+    'javax.servlet.ServletContextListener',
+    'org.apache.avalon.framework.logger.Logger',
+    'org.apache.log.Hierarchy',
+    'org.apache.log.Logger',
+    'org.reactivestreams.Publisher',
+    'org.reactivestreams.Subscriber',
+    'org.reactivestreams.Subscription',
+    'org.slf4j.impl.StaticLoggerBinder',
+    'org.slf4j.impl.StaticMDCBinder',
+    'org.slf4j.impl.StaticMarkerBinder',
+    'software.amazon.awssdk.endpoints.Endpoint',
+    'software.amazon.awssdk.endpoints.Endpoint$Builder',
+    'software.amazon.awssdk.endpoints.EndpointAttributeKey',
+    'software.amazon.awssdk.endpoints.EndpointProvider',
+    'software.amazon.awssdk.metrics.MetricCategory',
+    'software.amazon.awssdk.metrics.MetricCollector',
+    'software.amazon.awssdk.metrics.MetricLevel',
+    'software.amazon.awssdk.metrics.MetricPublisher',
+    'software.amazon.awssdk.metrics.NoOpMetricCollector',
+    'software.amazon.awssdk.metrics.SdkMetric',
+    'software.amazon.awssdk.profiles.Profile',
+    'software.amazon.awssdk.profiles.ProfileFile',
+    'software.amazon.awssdk.profiles.ProfileFile$Builder',
+    'software.amazon.awssdk.profiles.ProfileFileSupplier',
+    'software.amazon.awssdk.profiles.ProfileFileSystemSetting',
+    'software.amazon.awssdk.profiles.internal.ProfileSection',
+    'software.amazon.awssdk.protocols.core.OperationInfo',
+    'software.amazon.awssdk.protocols.core.OperationInfo$Builder',
+    'software.amazon.awssdk.protocols.core.ProtocolMarshaller',
+    'software.amazon.awssdk.protocols.jsoncore.JsonNode',
+    'software.amazon.awssdk.protocols.jsoncore.JsonNodeParser',
+    'software.amazon.awssdk.protocols.jsoncore.JsonNodeParser$Builder',
+    'software.amazon.awssdk.protocols.query.AwsEc2ProtocolFactory',
+    'software.amazon.awssdk.protocols.query.AwsEc2ProtocolFactory$Builder',
+    'software.amazon.awssdk.protocols.query.AwsQueryProtocolFactory',
+    'software.amazon.eventstream.HeaderValue',
+    'software.amazon.eventstream.Message',
+    'software.amazon.eventstream.MessageDecoder'
   )
-
-  if (BuildParams.runtimeJavaVersion > JavaVersion.VERSION_1_8) {
-    ignoreMissingClasses(
-            'javax.xml.bind.DatatypeConverter',
-            'javax.xml.bind.JAXBContext'
-    )
-  }
 }
