OpenJDK Update (April 2023 Patch releases)
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -2,8 +2,9 @@ opensearch        = 3.0.0
 lucene            = 9.7.0-snapshot-4d1ed9e
 
 bundled_jdk_vendor = adoptium
-bundled_jdk = 19.0.2+7
-
+bundled_jdk = 20.0.1+9
+# See please https://github.com/adoptium/temurin-build/issues/3371
+bundled_jdk_linux_ppc64le = 20+36
 
 # optional dependencies
 spatial4j         = 0.7
