--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -97,7 +97,7 @@ tasks.register("writeTestJavaPolicy") {
           "  permission org.bouncycastle.crypto.CryptoServicesPermission \"exportSecretKey\";",
           "  permission org.bouncycastle.crypto.CryptoServicesPermission \"exportPrivateKey\";",
           "  permission java.io.FilePermission \"\${javax.net.ssl.trustStore}\", \"read\";",
-          "  permission java.util.PropertyPermission \"software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
           "};"
         ].join("\n")
       )
@@ -105,7 +105,7 @@ tasks.register("writeTestJavaPolicy") {
       javaPolicy.write(
         [
           "grant {",
-          "  permission java.util.PropertyPermission \"software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride\", \"write\";",
+          "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
           "};"
         ].join("\n"))
     }
@@ -117,7 +117,7 @@ tasks.named("test").configure {
   // this is needed for insecure plugins, remove if possible!
   systemProperty 'tests.artifact', project.name
 
-  // Setting a custom policy to manipulate software.amazon.awssdk.sdk.ec2MetadataServiceEndpointOverride system property
+  // Setting a custom policy to manipulate aws.ec2MetadataServiceEndpoint system property
   // it is better rather disable security manager at all with `systemProperty 'tests.security.manager', 'false'`
   if (BuildParams.inFipsJvm){
     // Using the key==value format to override default JVM security settings and policy
