Added missing JARs, all tests pass.
Signed-off-by: dblock <dblock@amazon.com>

--- a/buildSrc/version.properties
+++ b/buildSrc/version.properties
@@ -41,6 +41,7 @@ commonscodec      = 1.15
 
 # plugin dependencies
 aws               = 2.20.55
+reactivestreams   = 1.0.4
 
 # when updating this version, you need to ensure compatibility with:
 #  - plugins/ingest-attachment (transitive dependency, check the upstream POM)
