--- a/plugins/discovery-ec2/build.gradle
+++ b/plugins/discovery-ec2/build.gradle
@@ -49,6 +49,13 @@ dependencies {
   api "software.amazon.awssdk:regions:${versions.aws}"
   api "software.amazon.awssdk:profiles:${versions.aws}"
   api "software.amazon.awssdk:endpoints-spi:${versions.aws}"
+  api "software.amazon.awssdk:annotations:${versions.aws}"
+  api "software.amazon.awssdk:metrics-spi:${versions.aws}"
+  api "software.amazon.awssdk:json-utils:${versions.aws}"
+  api "software.amazon.awssdk:protocol-core:${versions.aws}"
+  api "software.amazon.awssdk:aws-query-protocol:${versions.aws}"
+  api "software.amazon.awssdk:aws-json-protocol:${versions.aws}"
+  api "software.amazon.awssdk:third-party-jackson-core:${versions.aws}"
   api "org.apache.httpcomponents:httpclient:${versions.httpclient}"
   api "org.apache.httpcomponents:httpcore:${versions.httpcore}"
   api "commons-logging:commons-logging:${versions.commonslogging}"
@@ -57,6 +64,7 @@ dependencies {
   api "commons-codec:commons-codec:${versions.commonscodec}"
   api "com.fasterxml.jackson.core:jackson-databind:${versions.jackson_databind}"
   api "com.fasterxml.jackson.core:jackson-annotations:${versions.jackson}"
+  api "org.reactivestreams:reactive-streams:${versions.reactivestreams}"
 }
 
 restResources {
@@ -100,6 +108,8 @@ tasks.register("writeTestJavaPolicy") {
           "  permission org.bouncycastle.crypto.CryptoServicesPermission \"exportPrivateKey\";",
           "  permission java.io.FilePermission \"\${javax.net.ssl.trustStore}\", \"read\";",
           "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
+          "  permission java.io.FilePermission \"\${user.home}/.aws/config\", \"read\";",
+          "  permission java.io.FilePermission \"\${user.home}/.aws/credentials\", \"read\";",
           "};"
         ].join("\n")
       )
@@ -108,6 +118,8 @@ tasks.register("writeTestJavaPolicy") {
         [
           "grant {",
           "  permission java.util.PropertyPermission \"aws.ec2MetadataServiceEndpoint\", \"write\";",
+          "  permission java.io.FilePermission \"\${user.home}/.aws/config\", \"read\";",
+          "  permission java.io.FilePermission \"\${user.home}/.aws/credentials\", \"read\";",
           "};"
         ].join("\n"))
     }
@@ -144,27 +156,9 @@ tasks.named("thirdPartyAudit").configure {
     'org.apache.avalon.framework.logger.Logger',
     'org.apache.log.Hierarchy',
     'org.apache.log.Logger',
-    'org.reactivestreams.Publisher',
-    'org.reactivestreams.Subscriber',
-    'org.reactivestreams.Subscription',
     'org.slf4j.impl.StaticLoggerBinder',
     'org.slf4j.impl.StaticMDCBinder',
     'org.slf4j.impl.StaticMarkerBinder',
-    'software.amazon.awssdk.metrics.MetricCategory',
-    'software.amazon.awssdk.metrics.MetricCollector',
-    'software.amazon.awssdk.metrics.MetricLevel',
-    'software.amazon.awssdk.metrics.MetricPublisher',
-    'software.amazon.awssdk.metrics.NoOpMetricCollector',
-    'software.amazon.awssdk.metrics.SdkMetric',
-    'software.amazon.awssdk.protocols.core.OperationInfo',
-    'software.amazon.awssdk.protocols.core.OperationInfo$Builder',
-    'software.amazon.awssdk.protocols.core.ProtocolMarshaller',
-    'software.amazon.awssdk.protocols.jsoncore.JsonNode',
-    'software.amazon.awssdk.protocols.jsoncore.JsonNodeParser',
-    'software.amazon.awssdk.protocols.jsoncore.JsonNodeParser$Builder',
-    'software.amazon.awssdk.protocols.query.AwsEc2ProtocolFactory',
-    'software.amazon.awssdk.protocols.query.AwsEc2ProtocolFactory$Builder',
-    'software.amazon.awssdk.protocols.query.AwsQueryProtocolFactory',
     'software.amazon.eventstream.HeaderValue',
     'software.amazon.eventstream.Message',
     'software.amazon.eventstream.MessageDecoder'
