--- a/test/fixtures/hdfs-fixture/build.gradle
+++ b/test/fixtures/hdfs-fixture/build.gradle
@@ -55,6 +55,7 @@ dependencies {
   api "com.google.protobuf:protobuf-java:3.22.2"
   api "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
   api 'org.eclipse.jetty:jetty-server:9.4.51.v20230217'
+  api 'org.eclipse.jetty.websocket:javax-websocket-server-impl:9.4.51.v20230217'
   api 'org.apache.zookeeper:zookeeper:3.8.1'
   api "org.apache.commons:commons-text:1.10.0"
   api "commons-net:commons-net:3.9.0"
